# wot

./: README.md  pyproject.toml
notebooks/pandora_tiered/: distribution.ipynb  expectation.ipynb
src/wot/: __init__.py  montecarlo.py  visualize.py
src/wot/implementations/: pandora_tiered.py
