[project]
name = "wot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Esders-Kopecky", email = "andreas.kopecky@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pydantic>=2.11.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[project.scripts]
wot = "wot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "devtools>=0.12.2",
]
